src/objects/Special_Assistance__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Claimed__c</fullName>
        <formula>Vehicles_Claimed__c  *  Approved_Amount_per_Vehicle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Claimed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <formula>Vehicles_Remaining__c *  Approved_Amount_per_Vehicle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_Per_Vehicle__c</fullName>
        <description>Total value across all vehicles of special assistance</description>
        <label>Amount Requested Per Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <formula>Vehicles_Requested__c *  Approved_Amount_per_Vehicle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_per_Vehicle__c</fullName>
        <label>Approved Amount per Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Dealer requesting special assistance</description>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Must be a Dealer account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Expired Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Special Assistance</relationshipLabel>
        <relationshipName>Special_Assistance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To_Date__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_Requested__c</fullName>
        <description>Number of Vehicles this special assistance will apply to</description>
        <inlineHelpText>Number of vehicles requested by dealer.</inlineHelpText>
        <label>Number of Vehicles Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Special Assistance</relationshipLabel>
        <relationshipName>Special_Assistance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <formula>Organisation__r.Sales_Type__c</formula>
        <label>Sales Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Assistance_Id__c</fullName>
        <description>External Id for Special Assistance from Nissan Mainframe</description>
        <externalId>true</externalId>
        <label>Special Assistance Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Special Assistance</relationshipLabel>
        <relationshipName>Special_Assistance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicles_Claimed__c</fullName>
        <inlineHelpText>Number of retailed vehicles against this Special Assistance request.</inlineHelpText>
        <label>Vehicles Claimed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicles_Remaining__c</fullName>
        <formula>Vehicles_Requested__c -  Vehicles_Claimed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicles Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicles_Requested__c</fullName>
        <inlineHelpText>Number of vehicles approved by Nissan.</inlineHelpText>
        <label>Number of Vehicles Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Special Assistance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Organisation__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Number_of_Vehicles_Requested__c</columns>
        <columns>Amount_Requested_Per_Vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Special Assistance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Assistance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>